--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -19,7 +19,7 @@
   "module": "./dist/index.mjs",
   "types": "./src/index.ts",
   "bin": {
-    "db-migrate": "./dist/cli/migrate.mjs"
+    "db-migrate": "./bin/db-migrate.mjs"
   },
   "scripts": {
     "build": "tsdown",
