--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "init:project": "node --experimental-strip-types scripts/init/init-project.ts",
     "i18n:extract": "npx i18next-parser",
     "e2e:setup": "pnpm exec playwright install chromium ",
-    "e2e": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; pnpm --filter @pkg/e2e test",
-    "e2e:ui": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; pnpm --filter @pkg/e2e test:ui",
-    "e2e:headed": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; pnpm --filter @pkg/e2e test:headed",
-    "e2e:debug": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; pnpm --filter @pkg/e2e test:debug",
+    "e2e": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; pnpm --filter @pkg/e2e e2e:test",
+    "e2e:ui": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; pnpm --filter @pkg/e2e e2e:test:ui",
+    "e2e:headed": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; pnpm --filter @pkg/e2e e2e:test:headed",
+    "e2e:debug": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; pnpm --filter @pkg/e2e e2e:test:debug",
     "e2e:docker": "docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true; mkdir -p apps/e2e/test-results && docker compose -f compose.e2e.yml up --build --abort-on-container-exit --exit-code-from e2e",
     "e2e:docker:down": "docker compose -f compose.e2e.yml down -v && docker run --rm -v ./apps/e2e:/e2e alpine rm -rf /e2e/test-results 2>/dev/null || true",
     "release": "release-it",
